--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#1d262a</color>
+    <color name="colorPrimaryDark">#2b7a77</color>
+    <color name="colorAccent">#def2f1</color>
+    <color name="mainrecylerdarkblue">#17242a</color>
+    <color name="Stocklightblue">#DDDFD4</color>
 </resources>
